modules/js-tests/src/test/resources/failing/annotation-1.bal
package ballerina.net.fs;

public annotation configuration attach service<> {
    string dirURI;
    string events;
    boolean recursive;
}